feat: 티켓 닫을 시, tickets/ 폴더에 대화내용 저장